--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,6 @@
         <module>service</module>
         <module>mapper</module>
         <module>api</module>
-        <module>admin</module>
-        <module>boss</module>
         <module>customer</module>
     </modules>
     <packaging>pom</packaging>
@@ -31,6 +29,11 @@
     </properties>
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>2.9.2</version>
+            </dependency>
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
