--- a/service/pom.xml
+++ b/service/pom.xml
@@ -10,18 +10,30 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
     <artifactId>service</artifactId>
-<dependencies>
-    <dependency>
-        <groupId>com.yun</groupId>
-        <artifactId>common</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-        <groupId>com.yun</groupId>
-        <artifactId>mapper</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
-    </dependency>
-</dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>com.yun</groupId>
+            <artifactId>common</artifactId>
+            <version>2.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.yun</groupId>
+            <artifactId>mapper</artifactId>
+            <version>2.0.1-SNAPSHOT</version>
+        </dependency>
+        <!--jwt-->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.18.1</version>
+        </dependency>
+        <!--jwt算法包-->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+    </dependencies>
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
