--- a/mapper/pom.xml
+++ b/mapper/pom.xml
@@ -28,6 +28,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+        <!--        mail-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.5.3</version>
+        </dependency>
         <!--        mybatis-->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
