--- a/mapper/src/main/resources/application.yml
+++ b/mapper/src/main/resources/application.yml
@@ -5,6 +5,14 @@ spring:
       url: jdbc:mysql://localhost:3306/yun?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&characterEncoding=utf-8
       username: root
       password: root
+  mail:
+    username: 1269355513@qq.com
+    password: glgemtufvraahacc
+    protocol: smtp
+    default-encoding: UTF-8
+    host: smtp.qq.com
+  application:
+    name: spirng-boot-mail
 mybatis:
   mapper-locations: classpath:mappers/*.xml
   type-aliases-package: com.yun.beans.entity
